--- a/src/index.css
+++ b/src/index.css
@@ -111,19 +111,18 @@
 
 /* @media (min-width: 1281px) and (max-width: 1921px) {     */
 @media only screen and (min-width : 1824px) {
-    body::before {
-        /* content: "tablet to some desktop media query (1281 > 1921) fired"; */
+    /* body::before {
         content: "tablet to some desktop media query ( > 1824) fired";
         font-weight: bold;
         display: block;
         text-align: center;
-        background: rgba(255, 255, 0, 0.9); /* Semi-transparent yellow */
+        background: rgba(255, 255, 0, 0.9);
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         z-index: 99;
-      }    
+    } */    
     body{
         font-size: 1.4em;
     }
