--- a/src/index.css
+++ b/src/index.css
@@ -39,25 +39,7 @@
 }
 
 .green__gradient{
-    background: radial-gradient(50% 50% at 50% 50%, rgba(0, 134, 112, 0.232) 0%, rgba(0, 134, 112, 0.152) 66.18%, rgba(0, 71, 255, 0.016) 86.67%);
-}
-.green__gradient_2{
-    background: radial-gradient(50% 50% at 50% 50%, rgba(0, 134, 112, 0.195) 0%, rgba(0, 134, 112, 0.165) 51.59%, rgba(0, 71, 255, 0.015) 86.67%);
-}
-.green_blue_gradient{
-    background: linear-gradient(180deg, #58C0A7 0%, #21BADE 100%);    
-}
-.green_blue_gradient_y{
-    background: linear-gradient(90deg, #57BFA6 17.96%, #20A2C6 92.41%);
-}
-
-.layout-y{
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-}
-.layout-x{
-    padding-left: 7rem;
-    padding-right: 7rem;
+    background: radial-gradient(50% 50% at 50% 50%, #486B71 19.34%, rgba(73, 110, 116, 0.65) 53.71%, rgba(73, 110, 116, 0.3) 80.53%, rgba(73, 108, 114, 0) 100%);    
 }
 .section_title{
     font-size: 2rem;
